--- a/app/templates/layout.twig
+++ b/app/templates/layout.twig
@@ -46,10 +46,14 @@
 
 <!-- build:js /js/bundle.js -->
 <!-- bower:js -->
-<script src="src/js/main.js"></script>
 <!-- endbower -->
+<script src="src/js/main.js"></script>
 <!-- endbuild -->
 
-<script>(function(e,t,n,r,i,s,o){e["GoogleAnalyticsObject"]=i;e[i]=e[i]||function(){(e[i].q=e[i].q||[]).push(arguments)},e[i].l=1*new Date;s=t.createElement(n),o=t.getElementsByTagName(n)[0];s.async=1;s.src=r;o.parentNode.insertBefore(s,o)})(window,document,"script","//www.google-analytics.com/analytics.js","ga");ga("create","<% analyticsID %>","auto");ga("send","pageview")</script>
+<% if(analyticsID) { %>
+<script>(function(e,t,n,r,i,s,o){e["GoogleAnalyticsObject"]=i;e[i]=e[i]||function(){(e[i].q=e[i].q||[]).push(arguments)},e[i].l=1*new Date;s=t.createElement(n),o=t.getElementsByTagName(n)[0];s.async=1;s.src=r;o.parentNode.insertBefore(s,o)})(window,document,"script","//www.google-analytics.com/analytics.js","ga");ga("create","<%= analyticsID %>","auto");ga("send","pageview")</script>
+<% } else { %>
+<!-- Insert Google Analytics script here -->
+<% } %>
 </body>
 </html>
