- Improve readme file - Added gulp-gm to gulpfile - Added option for using image processing software

--- a/app/templates/layout.twig
+++ b/app/templates/layout.twig
@@ -13,7 +13,7 @@
 
   <% if (useModernizr) { %>
   <!-- build:js js/modernizr.min.js -->
-  <script src="/src/bower_components/modernizr/modernizr.js"></script>
+  <script src="/bower_components/modernizr/modernizr.js"></script>
   <!-- endbuild -->
   <% } %>
 
@@ -47,7 +47,7 @@
 <!-- build:js /js/bundle.js -->
 <!-- bower:js -->
 <!-- endbower -->
-<script src="src/js/main.js"></script>
+<script src="js/main.js"></script>
 <!-- endbuild -->
 
 <% if(analyticsID) { %>
